# SVG_SimpleToolBox

./: README.md
SVG_SimpleToolBox/src/: CMakeLists.txt  svgToolBox.cpp  svgToolBox.h  svgToolBox.hpp  test.cpp  test_commands.txt
src/: smalltoolbox.hpp  smalltoolbox_image.hpp  smalltoolbox_math.hpp  smalltoolbox_svg_extra.hpp  smalltoolbox_system.hpp  smalltoolbox_text.hpp
test/: CMakeLists.txt  math_test.cpp  svg_test.cpp  system_test.cpp  text_test.cpp
test/resources/: svg_commands.txt
